# DailyManagement

./: .editorconfig  34金币日常管理法则.md  Caddyfile  Dockerfile  README.md  check_data_debug.py  check_db.py  docker-compose.yml  nginx.conf  pyproject.toml  verify_fix.py
.github/: copilot-instructions.md
.github/workflows/: azure-webapps-python.yml  desktop-capture-windows.yml
backend/: __init__.py  app.py  requirements.txt
backend/migrations/: 20251205_add_annual_plans.sql  20251208_add_plan_year.sql  20260224_add_goal_execution_tables.sql  20260410_remove_idea_priority.sql  20260415_add_idea_completed_at.sql  20260415_add_idea_state_and_sort.sql  add_event_remark.sql  add_idea_priority.sql  add_plan_goal_score.sql  add_plan_goal_sort_order.sql  add_repeat_group_id.sql
backend/src/: __init__.py  app.py  config.py  utils.py
backend/src/api/: __init__.py
backend/src/models/: __init__.py  annual_plan.py  base.py  daily_score.py  db.py  event.py  event_type.py  goal_execution_queue.py  goal_task_status.py  idea.py  init.sql  plan_goal.py  user.py
backend/tests/: __init__.py
desktop-capture/: package-lock.json  package.json  vite.config.js
desktop-capture/src/: index.html  main.js  styles.css
desktop-capture/src-tauri/: Cargo.toml  tauri.conf.json
desktop-capture/src-tauri/src/: main.rs
frontend/: .eslintrc.json  admin.html  capture.html  downloads.html  event-modal.html  index.html  login.html  manifest.webmanifest  package-lock.json  package.json  register.html  service-worker.js
frontend/css/: capture.css  downloads.css  style.css
frontend/js/: auth.js  calendar.js  capture.js  downloads.js  event-manager.js  main.js  plans-api.js
specs/001-api/: plan.md  spec.md  tasks.md
specs/002-desktop-capture/: plan.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
(+4 files in other folders)
