[package]
name = "tonybase_capture"
version = "0.1.0"
description = "TonyBase desktop capture"
authors = ["GitHub Copilot"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.5.6", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
